2008-08-15  Martin Lambers <marlam@marlam.de>

	* glvm/glvm.h: Include <limits>. Fixes compilation with g++-4.3.

2008-07-25  Martin Lambers <marlam@marlam.de>

	* NEWS: Update for version 0.3.1.

2008-07-22  Martin Lambers <marlam@marlam.de>

	* gnulib/*: Gnulib update.
	* configure.ac, doc/cvlview.1, doc/cvlview.texi: Bump version to
	0.3.1.
	* configure.ac: Require CVL >= 0.2.5.
	* gnulib/alloca.h: Remove generated file from SVN.
	* build-aux/glew.m4, build-aux/cvl.m4, configure.ac, src/Makefile.am:
	Improve detection and usage of external libraries.
	* build-aux/depcomp, build-aux/Makefile.am, build-aux/config.guess, 
	build-aux/config.sub, build-aux/ltmain.sh, build-aux/install-sh,
	configure.ac, gnulib/m4/gnulib-comp.m4, gnulib/m4/gnulib-cache.m4,
	gnulib/Makefile.am, src/Makefile.am, gllib/Makefile.am,
	mhlib/Makefile.am: Use libtool to get linking right.
	* build-aux/Makefile.am: Update.

2008-07-04  Martin Lambers <marlam@marlam.de>

	* src/cvlview.cpp, src/dataset_selector.h: Show progress bar when
	saving a video, and allow to cancel the operation.
	* src/dataset_selector.h, src/dataset_selector.cpp: Add scan button to
	scan through the file and find out how many data sets it has.

2008-07-03  Martin Lambers <marlam@marlam.de>

	* src/dataset_selector.h, src/dataset_selector.cpp, src/cvlview.cpp:
	Add a SpinBox that allows to jump to specific data sets.
	* src/dataset_selector.cpp: Fix.
	* src/frame_info.h, src/frame_info.cpp, src/dataset_selector.h,
	src/dataset_selector.cpp, src/cvlview.cpp, src/cvlview.qrc,
	src/Makefile.am: Move data set display from frame info to data set
	selector. Remove prev/next buttons because the SpinBox can do the
	same.
	* src/range_selector.cpp: Improve heuristics for default upper/lower
	bounds.
	* src/cvlview.cpp: Use the current view by default for the Save and
	Copy actions.
	* src/cvlview.h, src/cvlview.cpp, src/dataset_selector.h: Add the
	capability to save videos to multi-frame PPM files.
	* NEWS: Update.
